new buttons! and some clean up

--- a/index.html
+++ b/index.html
@@ -11,23 +11,24 @@
     <div class="section-1">
       <i class="fab fa-linux fa-6x white"></i>
       <h2>Justin Sandhu</h2>
+      <div class="social-buttons">
+       <a href="https://github.com/justinsandhu" class="button github">🐙 GitHub</a>
+       <a href="https://mastodon.social/@justinsandhu" class="button mastodon">🐘 Mastodon</a>
+       <a href="https://keybase.io/justinsandhu" class="button keybase">🔐 Keybase</a>
+      </div>
     </div>
 
     <div class="section-2">
       <section id="about">
         <h1>About</h1>
         <p> I make things </p>
-        <h2>Contact</h2>
-        <p>email: 0.colds-mimes@icloud.com</p>
-        <p><i class="icon">🖥</i> <a href="https://www.github.com/justinsandhu">Github</a></p>
-        <p><i class="icon">🗝</i> <a href="https://keybase.io/justinsandhu">Keybase</a></p>
-        <p><i class="icon">🐘</i> <a href="https://mastodon.social/@JustinSandhu">Mastodon</a></p>
         <h2>Resume</h2>
         <p>Education: BS Information Systems</p>
         <p>Job 1: Electrical and control systems engineering</p>
         <p>Job 2: Helpdesk, Scripting</p>
         <p>Job 3: Systems Admin</p>
         <p>Job 4: Release Engineer</p>
+        <p>Job 5: Full Stack (Software and Infrastucture) Engineer</p>
       </section>
 
       <section id="engineering">
@@ -35,8 +36,9 @@
         <p>Ask me about my time working on:</p>
         <ul>
           <li>Agricultural data collection</li>
-          <li>Control systems supporting marine life</li>
+          <li>Internet, fiber, and voice services</li>
           <li>Maintaining routes advertised on the BGP global routing table</li>
+          <li>Control systems supporting marine life</li>
           <li>BASH or FISH</li>
         </ul>
 
